Bug 133043 - Fontbox empty for the whole document after applying a character style after undo without changing the selection first (see comment 12)
Summary: Fontbox empty for the whole document after applying a character style after u...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-14 18:48 UTC by Telesto
Modified: 2020-06-01 15:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.33 KB, application/vnd.oasis.opendocument.text)
2020-05-14 19:09 UTC, Telesto
Details
how works on linux (2.67 MB, video/mp4)
2020-05-15 17:15 UTC, BogdanB
Details
Screencast (719.64 KB, video/mp4)
2020-05-15 18:31 UTC, Telesto
Details
confirm it (237.55 KB, image/png)
2020-05-15 19:02 UTC, BogdanB
Details
Bibisect log (2.43 KB, text/plain)
2020-05-21 19:39 UTC, Telesto
Details
Example file (8.80 KB, application/vnd.oasis.opendocument.text)
2020-05-21 19:40 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-14 18:48:33 UTC
Description:
Fontbox empty after applying a character style after undo

Steps to Reproduce:
1. Open the attached file
2. Select ABC and drag to next column
3. CTRL+Z
4. Select/ Apply Character Style AAA -> Notice the empty


Actual Results:
Font name empty

Expected Results:
Should show the font


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in 7.0

Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Telesto 2020-05-14 18:49:05 UTC
I meant, but not in
Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 BogdanB 2020-05-14 19:07:50 UTC
You didn't attach the file.
Comment 3 Telesto 2020-05-14 19:09:45 UTC
Created attachment 160831 [details]
Example file
Comment 4 BogdanB 2020-05-15 17:15:46 UTC
Created attachment 160874 [details]
how works on linux

Can not repro on
Version: 7.0.0.0.alpha1+
Build ID: b1e396d86655a0131498a4691dd8069ea76c3477
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-15_04:58:38
Calc: threaded


See the video.

Maybe is just on Windows.
Comment 5 Telesto 2020-05-15 18:31:51 UTC
Created attachment 160876 [details]
Screencast
Comment 6 BogdanB 2020-05-15 18:50:28 UTC
If no one will test this until Tuesday on Windows, I will test it then. At work.
Comment 7 Telesto 2020-05-15 18:52:34 UTC
(In reply to BogdanB from comment #6)
> If no one will test this until Tuesday on Windows, I will test it then. At
> work.

Will work on Linux :-), I think. It's rather specific.. Don't deselect ABC after Undo.. but leave it as is. an select the character style AAA
Comment 8 BogdanB 2020-05-15 19:02:27 UTC
Created attachment 160877 [details]
confirm it

I confirm it on
Version: 7.0.0.0.alpha1+
Build ID: b1e396d86655a0131498a4691dd8069ea76c3477
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-05-15_04:58:38
Calc: threaded
Comment 9 BogdanB 2020-05-15 19:21:27 UTC
I will try to bibisect it.
Comment 10 BogdanB 2020-05-15 21:44:26 UTC
Confirm it in Version 3.6.7.2 (Build ID: e183d5b)

Confirm it in Version: 5.4.7.2
Build ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk2; 
Locale: ro-RO (ro_RO.UTF-8); Calc: group

And in all later versions
Comment 11 Telesto 2020-05-21 19:39:03 UTC
Created attachment 161096 [details]
Bibisect log

Bisected to
author	Caolán McNamara <caolanm@redhat.com>	2020-04-25 20:17:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-25 22:43:39 +0200
commit d26d1da82f0625ce1e5a99cc0081b1fcf422b315 (patch)
tree 5f4fa18baa60dc09f24b4681dc04b3a76599244e
parent 33966ab25d21594a3a4f40ce30ece73fa4f45a27 (diff)
rename SvtValueSet back to ValueSet

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d26d1da82f0625ce1e5a99cc0081b1fcf422b315
Comment 12 Telesto 2020-05-21 19:40:05 UTC
Created attachment 161097 [details]
Example file

STR used for bibisect
1. Open the attached file
2. Merge cell z with two bottom cells
Comment 13 Telesto 2020-05-21 19:40:52 UTC
Adding CC to Caolán McNamara
Comment 14 Caolán McNamara 2020-05-22 11:48:07 UTC
are comment #11 and #12 for this bug ? I see the problem of comment #1 in master, but I also see it in e.g. 4.1 which precedes the identified commit by many years
Comment 15 Telesto 2020-05-22 12:24:42 UTC
(In reply to Caolán McNamara from comment #14)
> are comment #11 and #12 for this bug ? I see the problem of comment #1 in
> master, but I also see it in e.g. 4.1 which precedes the identified commit
> by many years

Yes, comment 11 and 12 or for this bug..

Should have added an additional step 
Steps to Reproduce:
1. Open the attached file
2. Select ABC and drag to next column
3. CTRL+Z
4. Select/ Apply Character Style AAA -> Notice the empty (old bug 4.1)
5. Switch to a different table cell -> Still empty (new) -> Comment 12 as alternative

The very old bug, is not so interesting.. it limited to very specific issue.. moving the a different cell and back and resolved.. the new one is sticky.. 

But, yes, I found the new bug, by looking at the 4.1 bug.. so the bug is a bit of mess.
Comment 16 Caolán McNamara 2020-05-22 16:01:49 UTC
I see the new problem alright. I'll take this for the new problem in 7. I don't think the bisect is right, but I think it bisects to another of my changes anyway.
Comment 17 Telesto 2020-05-22 17:03:00 UTC
(In reply to Caolán McNamara from comment #16)
> I'll take this for the new problem in 7.
OK! 

> I don't think the bisect is right, but I think it bisects to another of my
changes anyway.

Oops! Thanks for letting me know.
Comment 18 Commit Notification 2020-05-22 19:41:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fcce0642c101429247a8be886df5a469aeb390a2

tdf#133043 explicitly set the combobox edit text

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Caolán McNamara 2020-05-22 20:00:15 UTC
I believe that fixes the new problem
Comment 20 Xisco Faulí 2020-06-01 14:08:44 UTC
@Telesto, could you please verify the issue is fixed ? I don't know which steps should I use to verify it
Comment 21 Telesto 2020-06-01 15:13:16 UTC
Working as expected
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 83c4f86f22dc37269ac6a038fe7de053c42aad6e
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL

Thanks Caolán