tdf#133043 explicitly set the combobox edit text

because earlier we set it to "" rather that set_active(-1) so its
still at the same active pos with the wrong text so setting a new
active pos that's the same as the old active pos is a nop from
the vcl case

the original code used Edit::SetText so leave the logic as it
is traditionally rather than try to change that

Change-Id: I520d1c0371579850d073d37295ccc7d852298aaa